# stowpkg

./: .gitignore  .mailmap  Makefile.am  README.md  configure.ac
auto/: autofinish.am  autofinish.m4  finish  gensubst  gensubst.sed
